@startuml

title __CLIENT's Class Diagram__\n

  namespace  {
    namespace om.Client {
      class com.Client.Client {
          {static} + MESSAGE_TO_END_CONNECTION : String
          + br : BufferedReader
          {static} + clientReceivedResponse : String
          {static} + clientRequest : String
          {static} + helper : ClientHelper
          + is : InputStreamReader
          {static} + sessionId : String
          {static} + checkIfUserIsLoggedIn()
          + displayHomeScreen()
          {static} + isLoginRequestSuccessful()
          {static} + isRegistrationRequestSuccessful()
          {static} + isTMPMessageDownloaded()
          {static} + isTMPMessageSuccessfulySent()
          {static} + sendDownloadRequest()
          {static} + sendLogOffRequest()
          {static} + sendUserLogInDetails()
          {static} + sendUserRegistrationDetails()
          {static} + sendUserTMPMessage()
          + startClient()
          - getHostName()
          - getPortNumber()
      }
    }
  }
  

  namespace  {
    namespace om.Client {
      class com.Client.ClientDriver {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace om.Client {
      class com.Client.ClientHelper {
          + serverHost : InetAddress
          + serverPort : int
          {static} - MESSAGE_TO_END_CONNECTION : String
          + getEcho()
          + terminateSession()
          ~ ClientHelper()
      }
    }
  }
  

  namespace  {
    namespace om.Client {
      class com.Client.ClientStreamSocket {
          - input : BufferedReader
          - output : PrintWriter
          - socket : Socket
          + ClientStreamSocket()
          + close()
          + receiveRequest()
          + sendRequest()
          - setStreams()
      }
    }
  }
  

  com.Client.Client o-- com.Users.User : user
  com.Client.ClientHelper o-- com.Client.ClientStreamSocket : mySocket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
